error fix on mobile nav bar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 .header{
@@ -14,6 +15,7 @@
 nav{
     display: flex;
     padding: 2% 6%;
+    background-color: #ffffff;
     justify-content: space-between;
     align-items: center;
 }
@@ -25,7 +27,7 @@ nav img{
     flex:1;
     text-align: right;
 }
-.nav-links ul li{
+.nav-links li{
     font-weight: 600;
     list-style: none;
     display: inline-block;
@@ -33,12 +35,12 @@ nav img{
     position: relative;
     
 }
-.nav-links ul li a{
+.nav-links li a{
     color: #757575;
     text-decoration: none;
     font-size: 17px;
 }
-.nav-links ul li::after{
+.nav-links li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -47,16 +49,16 @@ nav img{
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+.nav-links li:hover::after{
     width: 100%;
 }
 .about{
     width: 90%;
-    position: absolute;
+    /*position: absolute;
     top: 50%;
-    left: 50%;
-    margin-top: 3%;
-    transform: translate(-50%,-50%);
+    left: 50%;*/
+    margin:0 auto;
+    /*transform: translate(-50%,-50%);*/
 }
 .about img{
     width: 200px;
@@ -103,6 +105,7 @@ nav img{
     text-align: center;
     display: inline-block;
     text-decoration: none;
+    z-index: -1;
 }
 
 .socials{
@@ -113,48 +116,74 @@ nav img{
     margin: -50%;
 }
 
-nav .option{
+.burger{
     display: none;
+    cursor: pointer;
 }
-nav .option2{
-    display: none;
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px;
+    transition: all 0.3s ease;
 }
 
-@media (max-width: 700px) {
-    .nav-links ul li{
-        display: block;
+@media only screen and (max-width: 700px) {
+    body{
+        overflow-x: hidden;
     }
     .nav-links{
         position: absolute;
-        background:#ff5656 ;
+        right:0px;
         height: 100%;
-        overflow-x: hidden;
-        width: 200px;
-        top:0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
+        width: 40%;
+        top: 0vh;
+        background-color: gray;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 500;
+        padding-top:40px;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
     }
-    .nav-links ul li::after{
-        transition: 0.3s;
-    }
-    
-    .nav-links ul{
+
+    .nav-links li{
         padding: 30px;
+        opacity: 0;
     }
-    nav .option{
-        display: block;
+    .nav-links li a{
         color: black;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
     }
-    nav .option2{
+    .burger{
         display: block;
-        color: black;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
+        z-index: 700;
     }
+  }
+  
+  .nav-active{
+      transform: translateX(0);
+  }
+
+  @keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+  }
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+
+}
+.toggle .line2{
+      opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
 }
